04.-Deployments/03.-Kubernestes(k8s)/08.-Gateway/01.-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rrhh-gateway
  namespace: rrhh
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
