04.-Deployments/03.-Kubernestes(k8s)/08.-Gateway/02.-customer-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: job-route
  namespace: rrhh
spec:
  hostnames:
    - "rrhh.local"
  parentRefs:
    - name: rrhh-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      backendRefs:
        - name: job-service
          port: 8082
